--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.0.7",
     "tailwindcss": "^3.4.12",
-    "vue": "^3.4.37"
+    "vue": "^3.4.37",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
