--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@primevue/themes": "^4.0.7",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
+    "json-server": "^1.0.0-beta.2",
     "postcss": "^8.4.47",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.7",
