--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "tailwindcss": "^3.4.12",
     "vue": "^3.4.37",
     "vue-i18n": "^10.0.3",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
