--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@primevue/themes": "^4.0.7",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "json-server": "^1.0.0-beta.2",
     "postcss": "^8.4.47",
     "primeicons": "^7.0.0",
